We made 2 functions, addBookToTheDOM, and AddBookToTheLibrary

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </form>
       </div>
     </div>
-    <div id="books" class="bg-primary"></div>
+    <div id="books"></div>
+    
   </div>
 </body>
 </html>
