--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/script.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
     <h1 class="text-center">Library</h1>
     <div class="row">
       <div class="col-5 mx-auto">
-        <form id="searchBook" class="text-center">
+        <form class="text-center" id="searchBook">
           <label for="title">Title</label>
           <input class="form-control mb-3" type="text" name="book[title]" id="title">
           <label for="author">Author</label>
@@ -29,5 +28,6 @@
     <div id="books"></div>
     
   </div>
+  <script src="./js/script.js"></script>
 </body>
 </html>
