Some changes after the recommendation from the TSE :d

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <input class="form-control mb-3" type="number" name="book[pages]" id="pages">
           <label for="status">Aleady read</label>
           <input class="form-control mb-3" type="checkbox" name="book[status]" id="status">
-          <input class="btn btn-primary btn-block btn-lg" type="submit" value="search">
+          <input class="btn btn-primary btn-block btn-lg" type="submit" value="Add Book">
         </form>
       </div>
     </div>
